--- a/Day2/index.html
+++ b/Day2/index.html
@@ -3,7 +3,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
+    <title>TarjetaPresentación</title>
+    <link rel="icon" href="img/tarjeta.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -24,7 +25,7 @@
            
             <div class="cent">
             <p>Conocimientos en:</p>
-            <button class="button" onclick="location.href='https://www.facebook.com'">
+            <button class="button" onclick="location.href='https://drive.google.com/file/d/18W7iJVVThQxD2Nq5rS53Dt8XSQtJ0Azb/view?usp=sharing'">
                 <span>Descargar CV</span>
               </button>
             </div>
