--- a/Day2/index.html
+++ b/Day2/index.html
@@ -51,7 +51,7 @@
             <a href="https://www.facebook.com/profile.php?id=100015173073742">
                 <img src="img/Redesociales/facebook.png" alt="Descripción de la imagen">
             </a>
-            <a href="https://instagram.com/maximilianor_78?igshid=YTQwZjQ0NmI0OA==">
+            <a href="https://instagram.com/maximilianor_78/">
                 <img src="img/Redesociales/instagram.png" alt="Descripción de la imagen">
             </a>
             <a href="https://github.com/ByTRAX78">
